[package]
name = "abomonation_derive"
version = "0.2.2"
authors = ["Michael Layzell <michael@thelayzells.com>"]
description = "A custom derive plugin for abomonation"
license = "MIT"
repository = "https://github.com/mystor/abomonation_derive"
documentation = "https://docs.rs/abomonation_derive"

[lib]
name = "abomonation_derive"
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"
synstructure = "0.6"

[dev-dependencies]
abomonation = "0.4"
