[package]
name = "abomonation_derive"
version = "0.4.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]
description = "A custom derive plugin for abomonation"
license = "MIT"
repository = "https://github.com/mystor/abomonation_derive"
documentation = "https://docs.rs/abomonation_derive"
edition = "2018"

[lib]
name = "abomonation_derive"
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
syn = "0.15"
quote = "0.6"
synstructure = "0.10"

[dev-dependencies]
abomonation = "0.7"
